--- a/ang-basic-setup/angular.json
+++ b/ang-basic-setup/angular.json
@@ -8,9 +8,6 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
         }
       },
       "root": "",
@@ -53,13 +50,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
                 }
               ]
             }
@@ -127,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "ang-basic-setup"
+  "defaultProject": "ang-basic-setup",
+  "cli": {
+    "analytics": "d4d0ff2b-f305-4c4c-8396-ef7f691e4879"
+  }
 }
