--- a/myFirstAngularApp/angular.json
+++ b/myFirstAngularApp/angular.json
@@ -31,6 +31,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
